--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cancun Adventures</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Cancun Hotel Zone Map</h1>
-    
-    <!-- Google Maps Embed Code -->
-    <div class="map-container">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.7636654297316!2d-86.83142158488359!3d21.135501585943025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2b7473824ed7%3A0x79fbdb846e93faec!2sHotel%20Zone%2C%20Canc%C3%BAn%2C%20Quintana%20Roo%2C%20Mexico!5e0!3m2!1sen!2sus!4v1696340045164!5m2!1sen!2sus" 
-            width="600" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    </div>
+/* Full-page map container */
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
-</body>
-</html>
+.map-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+/* Title inside the map */
+h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 48px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    padding: 20px 40px;
+    border-radius: 10px;
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    z-index: 1; /* Ensures title stays on top of the map */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+}
